# obsidian-sync

./: .env.example  .gitignore  README.md  README_new.md  compose.prod.yaml  compose.yaml
.github/workflows/: ci.yml
backup/: Dockerfile  Dockerfile.scheduler  backup.sh  scheduler.sh
couchdb/: Dockerfile  docker-entrypoint.sh  local.ini
couchdb/local.d/: cors.ini
docs/: livesync-proxy-developer-guide.md  specification.md
livesync-proxy/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package.json
livesync-proxy/src/: index.js  infrastructure.rs  lib.rs  main.rs  utils.rs
livesync-proxy/src/application/: services.rs
livesync-proxy/src/domain/: models.rs  services.rs
livesync-proxy/src/infrastructure/: config.rs  couchdb.rs  websocket.rs
livesync-proxy/src/interfaces/: web.rs
livesync-proxy/src/interfaces/web/: handlers.rs  health.rs  metrics.rs  server.rs  setup.rs
livesync-proxy/static/: index.html
livesync-proxy/static/js/: metrics.js
livesync-proxy/tests/: couchdb_repository_test.rs  livesync_service_test.rs  websocket_broker_test.rs
