[package]
name = "livesync-proxy"
version = "0.1.0"
edition = "2021"
description = "HTTP proxy for Obsidian LiveSync"

[dependencies]
# Async runtime
tokio = { version = "1.37.0", features = ["full"] }

# Web framework
axum = "0.7.4"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.1", features = ["fs", "trace", "cors"] }

# HTTP client for CouchDB
reqwest = { version = "0.11.25", features = ["json"] }
hyper = "1.1.0"
hyper-util = { version = "0.1.3", features = ["client", "http1", "http2"] }
hyper-tls = "0.6.0"
bytes = "1.6.0"
http-body-util = "0.1.1"

# Serialization/Deserialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Metrics and monitoring
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.2"

# Configuration
config = "0.13.4" 
dotenvy = "0.15.7"

# Error handling
anyhow = "1.0.80"
thiserror = "1.0.57"

# Utilities
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
futures = "0.3.30"
futures-util = "0.3.30"
async-trait = "0.1.77"
base64 = "0.21.7"
url = "2.5.0"

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.12.1"
rstest = "0.18.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
