[package]
name = "livesync-proxy"
version = "0.1.0"
edition = "2021"
description = "HTTP proxy for Obsidian LiveSync"

[dependencies]
# Async runtime
tokio = { version = "1.45.0", features = ["full"] }

# Web framework
axum = "0.8.4"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }

# HTTP client for CouchDB
reqwest = { version = "0.12.15", features = ["json"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["client", "http1", "http2", "server"] }
http-body-util = "0.1.3"
hyper-tls = "0.6.0"
bytes = "1.10.1"

# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Metrics and monitoring
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"

# Configuration
config = "0.15.11" 
dotenvy = "0.15.7"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Utilities
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.88"
base64 = "0.22.1"
url = "2.5.4"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"
rstest = "0.25.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
